--- a/hyprland/.config/hypr/configs/autostart.conf
+++ b/hyprland/.config/hypr/configs/autostart.conf
@@ -3,6 +3,6 @@
 #################
 
 exec-once = waybar & hyprpaper
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = nm-applet --indicator
 
